# AlgoAssistant

./: .commitlintrc.js  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  DEPLOY_MINI.md  README.md  SETUP.md  deploy-mini.sh  docker-compose.dev.yml  docker-compose.mini.yml  docker-compose.yml
.cursor/rules/: global-rules.mdc
.devcontainer/: devcontainer.json
backend/: .dockerignore  .env.example  .env.mini  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.mini  Makefile  README.md  conftest.py  dev-start.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
backend/.cursor/rules/: backend-rules.mdc
backend/app/: __init__.py  celery_app.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  types.py
backend/app/api/: __init__.py  dashboard.py  gemini.py  github.py  google.py  leetcode.py  notion.py  problem.py  records.py  review.py  sync_task.py  users.py
backend/app/config/: __init__.py  settings.py  sqlite_config.py
backend/app/schemas/: __init__.py  ai.py  gemini.py  github.py  google.py  leetcode.py  notification.py  notion.py  problem.py  record.py  review.py  user.py
backend/app/services/: base_ai_service.py  base_db_service.py  base_note_service.py  base_oj_service.py  base_repo_service.py  base_service.py  dashboard_service.py  email_service.py  gemini_service.py  github_oauth_service.py  github_service.py  google_oauth_service.py  leetcode_graphql_service.py  leetcode_service.py  notification_service.py  notion_service.py  openai_service.py  problem_service.py  record_service.py  review_service.py  service_factory.py  sync_task_service.py  user_config_service.py  user_service.py
backend/app/tasks/: __init__.py  gemini_sync.py  github_sync.py  leetcode_batch_sync.py  leetcode_detail_sync.py  notion_sync.py  review_notification.py  task_manager.py
backend/app/utils/: logger.py  rate_limiter.py  retry.py  security.py
backend/scripts/: leetcode_sync_consumer.py  leetcode_sync_producer.py  start.sh
backend/tests/: README.md  conftest.py  test_account_settings_integration.py  test_api_github.py  test_api_notion.py  test_api_records_core.py  test_api_records_query_builder.py  test_api_review.py  test_api_sync_task.py  test_api_users.py  test_api_users_simple.py  test_basic.py  test_config_settings.py  test_deps.py  test_models.py  test_models_core.py  test_review_notification.py  test_services_base_db_service_detailed.py  test_services_github_oauth_service.py  test_services_github_service.py  test_services_leetcode_graphql_service.py  test_services_leetcode_service.py  test_services_notion_service.py  test_services_openai_service.py  test_services_record_service.py  test_services_record_service_core.py  test_services_review_service.py  test_services_service_factory.py  test_services_sync_task_service.py  test_services_user_config_service.py  test_services_user_service.py  test_simple.py  test_standalone.py  test_utils_logger.py  test_utils_rate_limiter.py  test_utils_security.py  test_utils_security_simple.py
frontend/: .dockerignore  .env.example  .env.mini  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  Dockerfile.dev  Dockerfile.mini  README.md  config-overrides.js  nginx.conf  nginx.mini.conf  package-lock.json  package.json
frontend/.cursor/rules/: frontend-rules.mdc
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: AIAnalysisCard.css  AIAnalysisCard.jsx  AccountSettingsModal.jsx  ErrorBoundary.jsx  GeminiIntegrationModal.jsx  GeminiSyncAction.jsx  GitConfigForm.jsx  GitHubAuth.jsx  GitHubIntegrationModal.jsx  GitSyncAction.jsx  GitSyncIntegration.js  GitSyncManager.js  GitSyncStatusPage.jsx  IntegrationCard.jsx  IntegrationStatus.jsx  LanguageSwitcher.js  Layout.js  LeetCodeConfig.jsx  LeetCodeIntegrationModal.jsx  LeetCodeProfile.jsx  NotificationConfigModal.jsx  NotionIntegrationModal.jsx  NotionSyncAction.jsx  PasswordChangeModal.jsx  PrivateRoute.js  index.js
frontend/src/components/auth/: GoogleLogin.js
frontend/src/components/common/: ActionButton.jsx  ConfigCard.jsx  ConfigModal.jsx  DataTable.jsx  ErrorBoundary.jsx  LanguageSwitcher.js  LoadingSpinner.jsx  ModernBreadcrumb.jsx  ModernLoading.jsx  PrivateRoute.js  StatusIndicator.jsx  SyncAction.jsx  index.js
frontend/src/components/dashboard/: CategoryChart.jsx  CollapsibleCard.css  CollapsibleCard.jsx  ErrorAnalysisPanel.jsx  ProgressChart.jsx  RecentActivityList.jsx  ResponsiveStatCard.css  ResponsiveStatCard.jsx
frontend/src/components/layout/: Layout.css  Layout.js
frontend/src/constants/: index.js
frontend/src/contexts/: AuthContext.js  ConfigContext.js  ErrorContext.js  GitSyncContext.js
frontend/src/hooks/: index.js  useDashboardData.js  useLoadingState.js  useResponsive.js  useSyncNotifications.js  useTableFilters.js
frontend/src/i18n/: index.js
frontend/src/pages/: AIAnalysis.jsx  CreateRecord.jsx  Dashboard.js  GeminiIntegration.jsx  Login.js  ProblemCreate.jsx  ProblemDetail.jsx  ProblemList.jsx  RecordDetail.jsx  Records.js  Register.js  Review.jsx  ReviewDetail.jsx  Settings.jsx  SyncTasks.jsx
frontend/src/services/: api.js  authService.js  configService.js  dashboardService.js  geminiSyncService.js  gitSyncService.js  googleService.js  index.js  leetcodeService.js  notionService.js  problemService.js  recordsService.js  reviewService.js  syncTaskService.js
frontend/src/styles/: App.css  Layout.css  Login.css
frontend/src/utils/: index.js
frontend/tests/: review.e2e.spec.ts
scripts/: README.md  deploy-1gb.sh  setup-swap.sh
(+13 files in other folders)
